--- a/src/index.html
+++ b/src/index.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Page title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Page title</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400&display=swap"
-    rel="stylesheet" />
-  <link rel="stylesheet" href="./styles.css" />
-</head>
+  <body>
+    <section class="hero container">
+      <div class="hero-left">
+        <h1 class="hero-title">
+          A party without <span class="hero-cocktails">cocktails</span><br />
+          is not like a party
+        </h1>
+        <p class="hero-about">
+          From classic sips to exotic mixes, we're your key to becoming a
+          cocktail wizard!
+        </p>
+        <button type="button" class="hero-button">view cocktails</button>
+      </div>
+      <div class="hero-right">
+        <img
+          class="fon"
+          src="./images/elements.png"
+          alt=""
+          width="552px"
+          ;
+          height="672px"
+          ;
+        />
+        <p class="hero-right-about">search your favorite cocktail by abc</p>
+      </div>
+    </section>
 
-<body>
-  <section class="hero container">
-    <div class="hero-left">
-      <h1 class="hero-title">
-        A party without <span class="hero-cocktails">cocktails</span><br />
-        is not like a party
-      </h1>
-      <p class="hero-about">
-        From classic sips to exotic mixes, we're your key to becoming a
-        cocktail wizard!
-      </p>
-      <button type="button" class="hero-button">view cocktails</button>
+    <!-- ❗️❗️❗️ Add partials like so for every page -->
 
-
-    </div>
-    <div class="hero-right">
-    </div>
-  </section>
-
-  <!-- ❗️❗️❗️ Add partials like so for every page -->
-
-  <script type="module" src="./index.js"></script>
-</body>
-
+    <script type="module" src="./index.js"></script>
+  </body>
 </html>
