--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="hero-right">
         <img
-          class="fon"
+          class="hero-right-background"
           src="./images/elements.png"
           alt=""
           width="552px"
