--- a/src/index.html
+++ b/src/index.html
@@ -28,12 +28,24 @@
       </div>
       <div class="hero-right">
         <img
-          class="hero-right-background"
-          src="./images/elements.png"
+          class="hero-right-background1"
+          src="./images/elements_desc.png"
           alt=""
           width="552px"
           ;
           height="672px"
+          ;
+        />
+        <img
+          class="hero-right-background2"
+          src="./images/rectangle725_desc.png"
+          alt=""
+          ;
+        />
+        <img
+          class="hero-right-background3"
+          src="./images/girl_desc.png"
+          alt=""
           ;
         />
         <p class="hero-right-about">search your favorite cocktail by abc</p>
