--- a/src/index.html
+++ b/src/index.html
@@ -16,39 +16,103 @@
   <body>
     <section class="hero container">
       <div class="hero-left">
-        <h1 class="hero-title">
+        <h1 class="hero-title text_dark">
           A party without <span class="hero-cocktails">cocktails</span><br />
           is not like a party
         </h1>
-        <p class="hero-about">
+        <p class="hero-about text_dark">
           From classic sips to exotic mixes, we're your key to becoming a
           cocktail wizard!
         </p>
         <button type="button" class="hero-button">view cocktails</button>
       </div>
       <div class="hero-right">
-        <img
-          class="hero-right-background1"
-          src="./images/elements_desc.png"
-          alt=""
-          width="552px"
-          ;
-          height="672px"
-          ;
-        />
-        <img
-          class="hero-right-background2"
-          src="./images/rectangle725_desc.png"
-          alt=""
-          ;
-        />
-        <img
-          class="hero-right-background3"
-          src="./images/girl_desc.png"
-          alt=""
-          ;
-        />
-        <p class="hero-right-about">search your favorite cocktail by abc</p>
+        <div class="background">
+          <picture>
+            <source
+              srcset="./images/elements_desctop.png 1x"
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="./images/elements_tablet.png 1x"
+              media="(min-width: 768px)"
+            />
+            <source
+              srcset="./images/elements_mobile.png 1x"
+              media="(min-width: 320px)"
+            />
+            <img
+              class="hero-right-background1"
+              src="./images/elements_desctop.png"
+              alt=""
+              ;
+            />
+          </picture>
+          <picture>
+            <source
+              srcset="./images/rectangle725_desctop.png 1x"
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="./images/rectangle725_tablet.png 1x"
+              media="(min-width: 768px)"
+            />
+            <source
+              srcset="./images/rectangle725_mobile.png 1x"
+              media="(min-width: 320px)"
+            />
+            <img
+              class="hero-right-background2"
+              src="./images/rectangle725_desctop.png"
+              alt=""
+              ;
+            />
+          </picture>
+          <picture>
+            <source
+              srcset="./images/girl_desctop.png 1x"
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="./images/girl_tablet.png 1x"
+              media="(min-width: 768px)"
+            />
+            <source
+              srcset="./images/girl_mobile.png 1x"
+              media="(min-width: 320px)"
+            />
+            <img
+              class="hero-right-background3"
+              src="./images/girl_desctop.png"
+              alt=""
+              ;
+            />
+          </picture>
+          <picture>
+            <source
+              srcset="./images/elements_desctop_dark.png 1x"
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="./images/elements_tablet_dark.png 1x"
+              media="(min-width: 768px)"
+            />
+            <source
+              srcset="./images/elements_mobile_dark.png 1x"
+              media="(min-width: 320px)"
+            />
+            <img
+              class="hero-right-background1_dark"
+              src="./images/elements_desctop_dark.png"
+              alt=""
+              ;
+            />
+          </picture>
+
+          <p class="hero-right-about text_dark">
+            search your favorite cocktail by abc
+          </p>
+        </div>
       </div>
     </section>
 
