--- a/src/index.html
+++ b/src/index.html
@@ -1,152 +1,80 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./styles.css" />
-  </head>
 
-  <body>
-    <!-- <section class="hero container">
-      <div class="hero-left">
-        <h1 class="hero-title text_dark">
-          A party without <span class="hero-cocktails">cocktails</span><br />
-          is not like a party
-        </h1>
-        <p class="hero-about text_dark">
-          From classic sips to exotic mixes, we're your key to becoming a
-          cocktail wizard!
-        </p>
-        <button type="button" class="hero-button">view cocktails</button>
-      </div>
-      <div class="hero-right">
-        <div class="background">
-          <picture>
-            <source
-              srcset="./images/elements_desctop.png 1x"
-              media="(min-width: 1280px)"
-            />
-            <source
-              srcset="./images/elements_tablet.png 1x"
-              media="(min-width: 768px)"
-            />
-            <source
-              srcset="./images/elements_mobile.png 1x"
-              media="(min-width: 320px)"
-            />
-            <img
-              class="hero-right-background1"
-              src="./images/elements_desctop.png"
-              alt=""
-              ;
-            />
-          </picture>
-          <picture>
-            <source
-              srcset="./images/rectangle725_desctop.png 1x"
-              media="(min-width: 1280px)"
-            />
-            <source
-              srcset="./images/rectangle725_tablet.png 1x"
-              media="(min-width: 768px)"
-            />
-            <source
-              srcset="./images/rectangle725_mobile.png 1x"
-              media="(min-width: 320px)"
-            />
-            <img
-              class="hero-right-background2"
-              src="./images/rectangle725_desctop.png"
-              alt=""
-              ;
-            />
-          </picture>
-          <picture>
-            <source
-              srcset="./images/girl_desctop.png 1x"
-              media="(min-width: 1280px)"
-            />
-            <source
-              srcset="./images/girl_tablet.png 1x"
-              media="(min-width: 768px)"
-            />
-            <source
-              srcset="./images/girl_mobile.png 1x"
-              media="(min-width: 320px)"
-            />
-            <img
-              class="hero-right-background3"
-              src="./images/girl_desctop.png"
-              alt=""
-              ;
-            />
-          </picture>
-          <picture>
-            <source
-              srcset="./images/elements_desctop_dark.png 1x"
-              media="(min-width: 1280px)"
-            />
-            <source
-              srcset="./images/elements_tablet_dark.png 1x"
-              media="(min-width: 768px)"
-            />
-            <source
-              srcset="./images/elements_mobile_dark.png 1x"
-              media="(min-width: 320px)"
-            />
-            <img
-              class="hero-right-background1_dark"
-              src="./images/elements_desctop_dark.png"
-              alt=""
-              ;
-            />
-          </picture>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Page title</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="./styles.css" />
+</head>
 
-          <p class="hero-right-about text_dark">
-            search your favorite cocktail by abc
-          </p>
-        </div>
-      </div>
-    </section> -->
-
-    <div class="no_result_container">
-      <h2 class="no_result_title">Favorite cocktails</h2>
-      <div class="no_result_center">
+<body>
+  <section class="hero container">
+    <div class="hero-left">
+      <h1 class="hero-title text_dark">
+        A party without <span class="hero-cocktails">cocktails</span><br />
+        is not like a party
+      </h1>
+      <p class="hero-about text_dark">
+        From classic sips to exotic mixes, we're your key to becoming a
+        cocktail wizard!
+      </p>
+      <button type="button" class="hero-button">view cocktails</button>
+    </div>
+    <div class="hero-right">
+      <div class="background">
         <picture>
-          <source
-            srcset="./images/rafiki_desctop.png 1x"
-            media="(min-width: 1280px)"
-          />
-          <source
-            srcset="./images/rafiki_tablet.png 1x"
-            media="(min-width: 768px)"
-          />
-          <source
-            srcset="./images/rafiki_tablet.png 1x"
-            media="(min-width: 320px)"
-          />
-          <img
-            class="no_result_img"
-            src="./images/rafiki_desctop.png"
-            alt=""
-            ;
-          />
+          <source srcset="./images/elements_desctop.png 1x" media="(min-width: 1280px)" />
+          <source srcset="./images/elements_tablet.png 1x" media="(min-width: 768px)" />
+          <source srcset="./images/elements_mobile.png 1x" media="(min-width: 320px)" />
+          <img class="hero-right-background1" src="./images/elements_desctop.png" alt="" ; />
         </picture>
-        <p class="no_result">
-          You haven't added any<br /><span class="no_result_fc"
-            >favorite cocktails</span
-          >yet
+        <picture>
+          <source srcset="./images/rectangle725_desctop.png 1x" media="(min-width: 1280px)" />
+          <source srcset="./images/rectangle725_tablet.png 1x" media="(min-width: 768px)" />
+          <source srcset="./images/rectangle725_mobile.png 1x" media="(min-width: 320px)" />
+          <img class="hero-right-background2" src="./images/rectangle725_desctop.png" alt="" ; />
+        </picture>
+        <picture>
+          <source srcset="./images/girl_desctop.png 1x" media="(min-width: 1280px)" />
+          <source srcset="./images/girl_tablet.png 1x" media="(min-width: 768px)" />
+          <source srcset="./images/girl_mobile.png 1x" media="(min-width: 320px)" />
+          <img class="hero-right-background3" src="./images/girl_desctop.png" alt="" ; />
+        </picture>
+        <picture>
+          <source srcset="./images/elements_desctop_dark.png 1x" media="(min-width: 1280px)" />
+          <source srcset="./images/elements_tablet_dark.png 1x" media="(min-width: 768px)" />
+          <source srcset="./images/elements_mobile_dark.png 1x" media="(min-width: 320px)" />
+          <img class="hero-right-background1_dark" src="./images/elements_desctop_dark.png" alt="" ; />
+        </picture>
+
+        <p class="hero-right-about text_dark">
+          search your favorite cocktail by abc
         </p>
       </div>
     </div>
+  </section>
 
-    <script type="module" src="./index.js"></script>
-  </body>
+  <div class="no_result_container">
+    <h2 class="no_result_title">Favorite cocktails</h2>
+    <div class="no_result_center">
+      <picture>
+        <source srcset="./images/rafiki_desctop.png 1x" media="(min-width: 1280px)" />
+        <source srcset="./images/rafiki_tablet.png 1x" media="(min-width: 768px)" />
+        <source srcset="./images/rafiki_tablet.png 1x" media="(min-width: 320px)" />
+        <img class="no_result_img" src="./images/rafiki_desctop.png" alt="" ; />
+      </picture>
+      <p class="no_result_text">
+        You haven't added any<br /><span class="no_result_fc">favorite cocktails</span> yet
+      </p>
+    </div>
+  </div>
+
+  <script type="module" src="./index.js"></script>
+</body>
+
 </html>
